5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1692_1100.log
== SUBMITION (2019-04-24 00:34:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:")
print("Entrada: ",valor)
if(valor==2):
	print("Animal: Tartaruga")
elif(valor==5):
	print("Animal: Garca")
elif(valor==10):
	print("Animal: Arara")
elif(valor==20)
	print("Animal: Mico-leao-dourado")
elif(valor==50)
	print("Animal: Onca-pintada")
elif(valor==100
	print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- EXECUTION TIME:
0.122138
-- ERROR:
  File "/home/codebench/codes/1692/1100/main.py", line 5
    print("Entrada: ",valor)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:35:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:")
     print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20)
	  print("Animal: Mico-leao-dourado")
elif(valor==50)
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- EXECUTION TIME:
0.176297
-- ERROR:
  File "/home/codebench/codes/1692/1100/main.py", line 5
    print("Entrada: ",valor)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:36:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:")
     print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20)
	  print("Animal: Mico-leao-dourado")
elif(valor==50)
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- ERROR:
File "XXXX", line 5
    print("Entrada: ",valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:36:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:")
print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20)
	  print("Animal: Mico-leao-dourado")
elif(valor==50)
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- ERROR:
File "XXXX", line 5
    print("Entrada: ",valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:57:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:")
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20):
	  print("Animal: Mico-leao-dourado")
elif(valor==50)
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- ERROR:
File "XXXX", line 5
    if(valor==2):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:59:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:"))
print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20):
	  print("Animal: Mico-leao-dourado")
elif(valor==50)
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- ERROR:
File "XXXX", line 14
    elif(valor==50)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:59:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:"))
print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20):
	  print("Animal: Mico-leao-dourado")
elif(valor==50)
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- ERROR:
File "XXXX", line 14
    elif(valor==50)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:00:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:"))
print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20):
	  print("Animal: Mico-leao-dourado")
elif(valor==50)
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- ERROR:
File "XXXX", line 14
    elif(valor==50)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:01:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:"))
print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20):
	  print("Animal: Mico-leao-dourado")
elif(valor==50)
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- ERROR:
File "XXXX", line 14
    elif(valor==50)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:01:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:"))
print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20):
	  print("Animal: Mico-leao-dourado")
elif(valor==50):
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:01:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:"))
print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20):
	  print("Animal: Mico-leao-dourado")
elif(valor==50):
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 01:01:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:"))
print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20):
	  print("Animal: Mico-leao-dourado")
elif(valor==50):
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- EXECUTION TIME:
0.112582
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:42:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor=int(input("valor das cedulas:"))
print("Entrada: ",valor)
if(valor==2):
	  print("Animal: Tartaruga")
elif(valor==5):
	  print("Animal: Garca")
elif(valor==10):
	  print("Animal: Arara")
elif(valor==20):
	  print("Animal: Mico-leao-dourado")
elif(valor==50):
	  print("Animal: Onca-pintada")
elif(valor==100):
	  print("Animal: Garoupa")
else:
	  print("Animal: Invalido")
-- EXECUTION TIME:
0.184238
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
